--- a/build.gradle
+++ b/build.gradle
@@ -23,17 +23,18 @@ repositories {
 
 dependencies {
     // If using Spock, need to depend on geb-spock
-    testCompile "org.gebish:geb-spock:$gebVersion"
-    testCompile("org.spockframework:spock-core:1.3-groovy-2.5") {
+    testImplementation "org.gebish:geb-spock:$gebVersion"
+    testImplementation("org.spockframework:spock-core:1.3-groovy-2.5") {
         exclude group: "org.codehaus.groovy"
     }
 
     // If using JUnit, need to depend on geb-junit (3 or 4)
-    testCompile "org.gebish:geb-junit4:$gebVersion"
+    testImplementation "org.gebish:geb-junit4:$gebVersion"
+    testImplementation "org.seleniumhq.selenium:selenium-support:$seleniumVersion"
 
     // Drivers
-    testCompile "org.seleniumhq.selenium:selenium-chrome-driver:$seleniumVersion"
-    testCompile "org.seleniumhq.selenium:selenium-firefox-driver:$seleniumVersion"
+    testImplementation "org.seleniumhq.selenium:selenium-chrome-driver:$seleniumVersion"
+    testImplementation "org.seleniumhq.selenium:selenium-firefox-driver:$seleniumVersion"
 }
 
 webdriverBinaries {
@@ -66,8 +67,4 @@ tasks.withType(Test) {
     testLogging {
         exceptionFormat = 'full'
     }
-}
-
-tasks.withType(GroovyCompile) {
-    groovyOptions.forkOptions.memoryMaximumSize = '256m'
 }
